<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back3"
    tools:context="io.github.dsouzadyn.evently.SignUpActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView

            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:fontFamily="@font/aguafina_script"
            android:gravity="center"
            android:text="HOLA!"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorWhite"
            app:fontFamily="@font/aguafina_script"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signUpName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/buttonstyle2"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:fontFamily="monospace"
            android:hint="@string/hint_name"
            android:alpha=".5"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/signUpEmail"
            android:layout_width="0dp"
            android:alpha=".5"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
            android:fontFamily="monospace"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpName" />

        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:alpha=".5"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:fontFamily="monospace"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpEmail" />

        <EditText
            android:id="@+id/signUpRollNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:alpha=".5"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:drawableLeft="@drawable/ic_filter_6_black_24dp"
            android:fontFamily="monospace"
            android:hint="@string/hint_roll_no"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword" />

        <EditText
            android:id="@+id/signUpPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:alpha=".5"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonstyle2"
            android:drawableLeft="@drawable/ic_phone_android_black_24dp"
            android:fontFamily="monospace"
            android:hint="@string/hint_phone_no"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpRollNumber" />

        <Spinner
            android:id="@+id/signUpBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha=".5"
            android:background="@drawable/buttonstyle2"
            android:entries="@array/branch_array"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:prompt="@string/branch_prompt"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/signUpSemester"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/signUpSemester"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/buttonstyle2"
            android:entries="@array/semester_array"
            android:alpha=".5"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:prompt="@string/semester_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/signUpCollege"
            app:layout_constraintStart_toEndOf="@+id/signUpBranch"
            app:layout_constraintTop_toBottomOf="@+id/signUpPhoneNumber" />

        <Spinner
            android:id="@+id/signUpCollege"
            android:visibility="gone"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:alpha=".5"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/buttonstyle2"
            android:entries="@array/college_array"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:prompt="@string/college_prompt"
            android:spinnerMode="dialog"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/signUpSemester"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signUpSemester" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="8dp"
            android:alpha=".75"
            android:fontFamily="monospace"
            android:background="@drawable/buttonstyle2"
            android:drawableRight="@drawable/ic_send_black_24dp"
            android:padding="16dp"
            android:text="REGISTER"
            android:textColor="@color/DarkBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUpSemester"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
</LinearLayout>
