<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:orientation="horizontal"
    android:background="@color/DarkBlue">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/itemTime"
            android:layout_marginTop="16dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"/>
        <TextView
            android:id="@+id/itemDay"
            android:layout_marginTop="16dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/itemTitle"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:text="EVENT NAMME"/>
            <TextView
                android:id="@+id/itemDescription"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="EVENT"/>
            <TextView
                android:id="@+id/itemType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/text_event_description"/>
            <TextView
                android:id="@+id/itemLocation"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/text_event_description"/>
            <TextView
                android:id="@+id/itemSubType"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/text_event_description"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/currency_rupee"
                    android:fontFamily="monospace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/itemPrice"
                    android:text="@string/text_price"
                    android:fontFamily="monospace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <Button
                android:id="@+id/itemRegisterBtn"
                android:layout_marginTop="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@drawable/buttonstyle6"
                android:text="REGISTER"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
