<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:background="@color/DarkBlue"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/itemDay"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/text_time"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/itemTime"
            android:layout_marginTop="6dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"/>

        <TextView
            android:id="@+id/itemDay2"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/text_time"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/itemTime2"
            android:layout_marginTop="6dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"/>

        <TextView
            android:id="@+id/itemDay3"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="monospace"
            android:text="@string/text_time"
            android:textColor="#fff" />
        <TextView
            android:id="@+id/itemTime3"
            android:layout_marginTop="6dp"
            android:textColor="#fff"
            android:fontFamily="monospace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"/>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp">
        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/id"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                android:text="EVENT NAMME"/>
            <TextView
                android:id="@+id/itemSubType"
                android:textSize="16dp"
                android:visibility="gone"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="Team Event"/>

            <TextView
                android:id="@+id/itemType"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/text_event_description"/>


            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:fontFamily="monospace"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                android:text="@string/text_event_description"/>
            <LinearLayout
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/currency_rupee"
                    android:fontFamily="monospace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/content"
                    android:text="@string/text_price"
                    android:fontFamily="monospace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
