<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/DarkBlue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/hello"
                android:layout_margin="16dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="HELLO"
                android:textStyle="bold"
                android:fontFamily="monospace"
                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/notAllReg"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorRed"
                android:textColor="@color/colorWhite"
                android:textSize="20dp"
                android:fontFamily="monospace"
                android:text="Please select 1 event from each day(Ignore if in Team Events)"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="16dp">
            <android.support.v7.widget.RecyclerView
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/recieptList"
                android:name="io.github.dsouzadyn.evently.RecieptFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                app:layoutManager="LinearLayoutManager"
                tools:context="io.github.dsouzadyn.evently.fragments.RecieptFragment"
                tools:listitem="@layout/fragment_reciept" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="18dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/confirmationText"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
                    android:textSize="40dp"
                    android:text="@string/text_unconfirmed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"/>
                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/qrImage"
                    android:layout_width="172dp"
                    android:layout_height="172dp"
                    android:contentDescription="@string/app_name"
                    android:layout_margin="16dp"/>

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>

